[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsheet-mcp"
version = "0.1.0"
description = "Local Model Context Protocol (MCP) server for the Smartsheet REST API"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Brian Terry" }]
keywords = ["mcp", "smartsheet", "model-context-protocol", "cursor", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]
dependencies = [
    "mcp[cli]>=1.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
smartsheet-mcp = "smartsheet_mcp.server:main"

[project.urls]
Documentation = "https://developers.smartsheet.com/api/smartsheet/introduction"

[tool.setuptools.packages.find]
where = ["src"]
